# CPPProjects

./: .gitmodules  mathTest.cpp  myMathLib.cpp  myMathlib.hpp  test.cpp
Intro/1_HelloWorld/: CMakeLists.txt
Intro/1_HelloWorld/app/: CMakeLists.txt  main.cc
Intro/1_HelloWorld/cmake/: AddGitSubmodule.cmake
Intro/1_HelloWorld/configured/: CMakeLists.txt
Intro/1_HelloWorld/configured_files/include/: config.hpp
Intro/1_HelloWorld/src/: CMakeLists.txt  my_lib.cc
Intro/1_HelloWorld/tests/: CMakeLists.txt  main.cc
